--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,16 @@ gpgpu = { version = "0.2.0", features = ["image", "integrate-image"] }
 image = "0.24.6"
 rand = "0.8.5"
 oidn = { version = "1.4.3", optional = true }
+imgui = "0.11.0"
+glium = "0.32.1"
+imgui-glium-renderer = "0.11.0"
+imgui-winit-support = "0.11.0"
 
 [build-dependencies]
 spirv-builder = "0.7.0"
 
 [features]
 oidn = ["dep:oidn"]
+
+[profile.dev.package."*"]
+opt-level = 3
