--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ imgui = "0.11.0"
 glium = "0.32.1"
 imgui-glium-renderer = "0.11.0"
 imgui-winit-support = "0.11.0"
+lazy_static = "1.4.0"
 
 [build-dependencies]
 spirv-builder = "0.7.0"
