--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ shared_structs = { path = "shared_structs" }
 bytemuck = { version = "1.13.1", features = ["derive"] }
 glam = { version = "0.22.0", features = ["bytemuck"] }
 gpgpu = { version = "0.2.0", features = ["image", "integrate-image"] }
-image = "0.24.6"
 rand = "0.8.5"
 oidn = { version = "1.4.3", optional = true }
 imgui = "0.11.0"
@@ -17,6 +16,7 @@ glium = "0.32.1"
 imgui-glium-renderer = "0.11.0"
 imgui-winit-support = "0.11.0"
 lazy_static = "1.4.0"
+russimp = { version = "2.0.4", features = ["prebuilt"] }
 
 [build-dependencies]
 spirv-builder = "0.7.0"
