More bvh node to shared structs

--- a/shared_structs/Cargo.toml
+++ b/shared_structs/Cargo.toml
@@ -5,3 +5,4 @@ edition = "2021"
 
 [dependencies]
 bytemuck = { version = "1.13.1", features = ["derive"] }
+glam = { version = "0.22", default-features = false, features = ["bytemuck"] }
