--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ imgui-winit-support = "0.11.0"
 lazy_static = "1.4.0"
 russimp = { version = "2.0.4", features = ["prebuilt"] }
 gnuplot = "0.0.37"
+egui_glium = "0.20.1"
+egui = "0.20.1"
 
 [build-dependencies]
 spirv-builder = "0.7.0"
