--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ lazy_static = "1.4.0"
 russimp = { version = "2.0.4", features = ["prebuilt"] }
 egui_glium = "0.20.1"
 egui = "0.20.1"
+image = { version = "0.23.14", default-features = false, features = ["png", "jpeg"] }
 
 [build-dependencies]
 spirv-builder = "0.7.0"
