--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ russimp = { version = "2.0.4", features = ["prebuilt"] }
 egui_glium = "0.20.1"
 egui = "0.20.1"
 image = { version = "0.23.14", default-features = false, features = ["png", "jpeg"] }
+parking_lot = "0.12.1"
 
 [build-dependencies]
 spirv-builder = "0.7.0"
