--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,12 @@ glam = { version = "0.22.0", features = ["bytemuck"] }
 gpgpu = { git = "https://github.com/pema99/gpgpu-rs.git", branch = "samplers", features = ["image", "integrate-image"] }
 rand = "0.8.5"
 oidn = { version = "1.4.3", optional = true }
-glium = "0.32.1"
 lazy_static = "1.4.0"
 russimp = { version = "2.0.5", features = ["prebuilt"] }
-egui_glium = "0.20.1"
 egui = "0.20.1"
 image = { version = "0.23.14", default-features = false, features = ["png", "jpeg"] }
 parking_lot = "0.12.1"
+eframe = { version = "0.20", features = ["wgpu", "default_fonts"], default-features = false }
 
 [build-dependencies]
 spirv-builder = "0.7.0"
