--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,14 @@ rand = "0.8.5"
 oidn = { version = "1.4.3", optional = true }
 lazy_static = "1.4.0"
 russimp = { version = "2.0.5", features = ["prebuilt"] }
-egui = "0.20.1"
 image = { version = "0.23.14", default-features = false, features = ["png", "jpeg"] }
 parking_lot = "0.12.1"
-eframe = { version = "0.20", features = ["wgpu", "default_fonts"], default-features = false }
+winit = "0.27.5"
+wgpu = { version = "0.14.2", features = ["spirv"] }
+egui-wgpu = "0.20.0"
+egui_winit_platform = "0.17.0"
+egui = "0.20.0"
+pollster = "0.2.5"
 
 [build-dependencies]
 spirv-builder = "0.7.0"
