--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ egui_winit_platform = "0.17.0"
 egui = "0.20.0"
 pollster = "0.2.5"
 tinyfiledialogs = "3.9.1"
+fast_image_resize = "2.7.3"
 
 [build-dependencies]
 spirv-builder = "0.7.0"
