--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,21 +9,24 @@ shared_structs = { path = "shared_structs" }
 kernels = { path = "kernels" }
 bytemuck = { version = "1.13.1", features = ["derive"] }
 glam = { version = "0.22.0", features = ["bytemuck"] }
-gpgpu = { git = "https://github.com/pema99/gpgpu-rs.git", branch = "samplers", features = ["image", "integrate-image"] }
 rand = "0.8.5"
 oidn = { version = "1.4.3", optional = true }
 lazy_static = "1.4.0"
 russimp = { version = "2.0.5", features = ["prebuilt"] }
 image = { version = "0.23.14", default-features = false, features = ["png", "jpeg"] }
 parking_lot = "0.12.1"
-winit = "0.27.5"
-wgpu = { version = "0.14.2", features = ["spirv"] }
-egui-wgpu = "0.20.0"
-egui_winit_platform = "0.17.0"
-egui = "0.20.0"
+winit = "0.28.6"
+wgpu = { path = "D:/Projects/wgpu/wgpu", features = ["spirv"] }
+egui-wgpu = "0.21.0"
+egui_winit_platform = "0.18.0"
+egui = "0.21.0"
 pollster = "0.2.5"
 tinyfiledialogs = "3.9.1"
 fast_image_resize = "2.7.3"
+futures = "0.3.28"
+
+[patch.crates-io]
+wgpu = { path = "D:/Projects/wgpu/wgpu" }
 
 [build-dependencies]
 spirv-builder = "0.7.0"
