Start of polyfill

--- a/shared_structs/Cargo.toml
+++ b/shared_structs/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 bytemuck = { version = "1.13.1", features = ["derive"] }
 glam = { version = "0.22", default-features = false, features = ["bytemuck"] }
+spirv-std = "0.7.0"
