--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ rand = "0.8.5"
 oidn = { version = "1.4.3", optional = true }
 lazy_static = "1.4.0"
 russimp = { version = "2.0.5", features = ["prebuilt"] }
-image = { version = "0.23.14", default-features = false, features = ["png", "jpeg"] }
+image = { version = "0.23.14", default-features = false, features = ["png", "jpeg", "hdr", "tga"] }
 parking_lot = "0.12.1"
 winit = "0.27.5"
 wgpu = { version = "0.14.2", features = ["spirv"] }
