--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,12 @@ shared_structs = { path = "shared_structs" }
 kernels = { path = "kernels" }
 bytemuck = { version = "1.13.1", features = ["derive"] }
 glam = { version = "0.22.0", features = ["bytemuck"] }
-gpgpu = { git = "https://github.com/pema99/gpgpu-rs.git", branch = "explicit-polling", features = ["image", "integrate-image"] }
+gpgpu = { git = "https://github.com/pema99/gpgpu-rs.git", branch = "dev", features = ["image", "integrate-image"] }
 rand = "0.8.5"
 oidn = { version = "1.4.3", optional = true }
 lazy_static = "1.4.0"
 russimp = { version = "2.0.5", features = ["prebuilt"] }
-image = { version = "0.23.14", default-features = false, features = ["png", "jpeg", "hdr", "tga"] }
+image = { version = "0.24.6", default-features = false, features = ["png", "jpeg", "hdr", "tga", "exr", "openexr"] }
 parking_lot = "0.12.1"
 winit = "0.27.5"
 wgpu = { version = "0.14.2", features = ["spirv"] }
