--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,25 @@
         {
             "type": "lldb",
             "request": "launch",
+            "name": "Debug unit tests in library 'rustic'",
+            "cargo": {
+                "args": [
+                    "test",
+                    "--no-run",
+                    "--lib",
+                    "--package=rustic"
+                ],
+                "filter": {
+                    "name": "rustic",
+                    "kind": "lib"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
             "name": "Debug executable 'rustic'",
             "cargo": {
                 "args": [
@@ -36,6 +55,44 @@
                 "filter": {
                     "name": "rustic",
                     "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug integration test 'correctness_tests'",
+            "cargo": {
+                "args": [
+                    "test",
+                    "--no-run",
+                    "--test=correctness_tests",
+                    "--package=rustic"
+                ],
+                "filter": {
+                    "name": "correctness_tests",
+                    "kind": "test"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug benchmark 'benchmark'",
+            "cargo": {
+                "args": [
+                    "test",
+                    "--no-run",
+                    "--bench=benchmark",
+                    "--package=rustic"
+                ],
+                "filter": {
+                    "name": "benchmark",
+                    "kind": "bench"
                 }
             },
             "args": [],
