--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,29 +8,27 @@ edition = "2021"
 shared_structs = { path = "shared_structs" }
 kernels = { path = "kernels" }
 bytemuck = { version = "1.13.1", features = ["derive"] }
-glam = { version = "0.22.0", features = ["bytemuck"] }
-gpgpu = { git = "https://github.com/pema99/gpgpu-rs", branch = "wgpu19", features = ["image", "integrate-image"] }
+glam = { version = "0.24.2", default-features = false, features = ["bytemuck", "libm"] }
+gpgpu = { git = "https://github.com/pema99/gpgpu-rs", rev = "226579e", features = ["image", "integrate-image"] }
 rand = "0.8.5"
 oidn = { version = "1.4.3", optional = true }
 lazy_static = "1.4.0"
-russimp = { git = "https://github.com/pema99/russimp", features = ["prebuilt"], branch = "self" }
-russimp-sys = { git = "https://github.com/pema99/russimp-sys", features = ["prebuilt"] }
+russimp = { git = "https://github.com/jkvargas/russimp", features = ["prebuilt"], rev = "67accd0" }
 image = { version = "0.24.6", default-features = false, features = ["png", "jpeg", "hdr", "tga", "exr", "openexr"] }
 parking_lot = "0.12.1"
 winit = "0.29.10"
 wgpu = { version = "0.19.1", features = ["spirv"] }
-egui-wgpu = { git = "https://github.com/pema99/egui" }
-egui_winit_platform = { git = "https://github.com/pema99/egui_winit_platform" }
-egui = { git = "https://github.com/pema99/egui" }
-egui_plot = { git = "https://github.com/pema99/egui" }
+egui-wgpu = { git = "https://github.com/emilk/egui", rev = "5d0bc2bf" }
+egui_winit_platform = { git = "https://github.com/pema99/egui_winit_platform", rev = "2756ed9" }
+egui = { git = "https://github.com/emilk/egui", rev = "5d0bc2bf" }
+egui_plot = { git = "https://github.com/emilk/egui", rev = "5d0bc2bf" }
 pollster = "0.2.5"
 tinyfiledialogs = "3.9.1"
 fast_image_resize = "2.7.3"
 rayon = "1.7.0"
-ahash = "=0.8.6"
 
 [build-dependencies]
-spirv-builder = "0.8.0"
+spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "1a9c8b8" }
 
 [features]
 oidn = ["dep:oidn"]
