--- a/shared_structs/Cargo.toml
+++ b/shared_structs/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2021"
 
 [dependencies]
 bytemuck = { version = "1.13.1", features = ["derive"] }
-glam = { version = "0.22", default-features = false, features = ["bytemuck"] }
-spirv-std = "0.7.0"
+glam = { version = "0.24.2", default-features = false, features = ["bytemuck", "libm"] }
+spirv-std = "0.9.0"
